<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_maps"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/maps"
        app:showAsAction="always" />
    <item
        android:id="@+id/language"
        android:title="@string/language" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>